# Math-Info

./: .gitignore
TD01/: TD01.cpp
TD02/: CMakeLists.txt
TD02/src/: exo_02.cpp  exo_03.cpp  exo_04.cpp  utils.cpp  utils.hpp
